syntax = "proto3";
option go_package = "/";

import "google/protobuf/timestamp.proto";

message Order {
    string id = 1;
    string product_id = 2;
    int32 quantity = 3;
    string ship_method = 4;
    string address = 5;
    google.protobuf.Timestamp date = 6;
}

message PostOrderRequest {
    string product_id = 1;
    int32 quantity = 2;
    string ship_method = 3;
    string address = 4;
}

message PostOrderResponse {
    int32 status_code = 1;
    string message = 2;
}

service OrderService {
    rpc PostOrder(PostOrderRequest) returns (PostOrderResponse) {}
}